--- a/upload/css/style.css
+++ b/upload/css/style.css
@@ -9,7 +9,7 @@ html {width:100%}
 
 body {font-family: 'PT Sans', sans-serif;font-size:14px; line-height:19px; color:#424242; min-width:1030px; background:#2c2c2c;-webkit-text-size-adjust: none;}
 
-.main{width: 940px;margin: 0 auto;}
+.main{width: 940px; margin: 0 auto;}
 
 /*********************************fonts*************************************/
 .reg {text-transform:none}
@@ -52,26 +52,13 @@ header h1{float: left;margin-left: 21px;}
 header h1 a {display:block;width:185px;height:58px;background:url(../images/logo.png) 0 0 no-repeat; text-decoration:none; text-indent:-9999px;}
 
 /*********************************content*************************************/
-#content {padding:0 0px 0px;position: relative;z-index: 1;min-height: 2000px;}
+#content {padding:0 0px 0px;position: relative;z-index: 1;min-height: 1500px;}
 .cont_pad{padding:0 0 0 0 !important;}
 
 /*===============================>> Paragraphs <<=============================*/
 
 p {margin-bottom:19px}
 .p2{ margin-bottom:22px;}
-
-/*================================>> LISTS <<========================================*/
-.list1{}
-.list1 li{ background:url(../images/marker1.png) 0 7px no-repeat; padding-left:20px;}
-.list1 a{}
-
-.list2{}
-.list2 li{ background:url(../images/marker2.png) 0 7px no-repeat; padding-left:20px;}
-.list2 a{}
-
-.list3{}
-.list3 li{ background:url(../images/marker3.png) 0 7px no-repeat; padding-left:20px;}
-.list3 a{}
 
 /*================================>> H <<========================================*/
 h2,h3{ font-weight:normal;}
@@ -96,6 +83,7 @@ h5.ind{margin-bottom: 19px;}
 
 .flex-direction-nav a, .social_box img, .sf-menu a, .offer_col>a, .offer_col span, .offer_col>a .description:before, .blog_nav a, #content a, .portfolio2 a{-webkit-transition: all 0.3s ease;-moz-transition: all 0.3s ease;-o-transition: all 0.3s ease;transition: all 0.3s ease;}
 /*********************************page_1*************************************/
+div .title{margin-top: auto; margin-bottom: auto; vertical-align: middle;}
 .ext_list>li, .ext_box{ }
 .ext_list>li>figure, .ext_box>figure{ float:left;}
 .ext_list>li>div, .ext_box>div{overflow:hidden;}
@@ -126,19 +114,22 @@ h5.ind{margin-bottom: 19px;}
 .port_box .port_col>a:hover span{top: 50%;}
 
 /* ===============================>> About Page <<========================*/
-.about_gap {height: 15px;}
+.about_gap {height: 25px;}
 .about_content {font-size: 19px;background: #fff;border-radius: 3px;padding: 20px;}
+.about_text	{line-height: 22px}
+.about_links{display: block; margin-left: auto; margin-right: auto; margin-top: 15px; text-align: center;}
+.buttonGap{ margin-left: 15px; margin-right: 15px;}
 
 .team{float: left;margin-left: 20px;background: #fff;border-radius: 3px;}
 .team_box .team:first-child{margin-left: 0;}
 
-.team img{border-radius: 3px;margin-right: 20px;}
+.team img{border-radius: 15px;margin-right: 20px;}
 /* .team .text{text-align: center;padding: 24px 0 25px;border-bottom: 1px solid #eeeeee;} */
 .team .stat{font-size: 19px;line-height: 24px;color: #a2a49e;}
 
 /*================================>> Contact Page <<========================================*/
-.col3{width: 400px;float: left;}
-.col4{width: 500px;margin-left: 40px;float: left;}
+.col3{width: 400px; float: left;}
+.col4{width: 500px; margin-left: 40px; float: left;}
 
 /* Contact form */
 #contact-form {padding:0px 0 0 0;float: left;}
@@ -157,23 +148,8 @@ h5.ind{margin-bottom: 19px;}
 #contact-form span{ display:block; margin: 0px 0 0 5px;}
 
 .font2{font-size: 19px;line-height: 24px;}
+.noscript_error{text-align:left; color:red; font-size:21px; clear:both;}
 .title1{margin-bottom: 35px;}
-
-.map_wrapper{
-  display: block;
-  margin-bottom: 50px;
-  border-radius: 3px;box-shadow: 0 1px 1px #d1d1d1;
-}
-#map_canvas {
-	 width:100%;
-   height:519px;
-}
-.adress{}
-.adress span{ display:inline-block; width:74px;}
-.adress dt{ margin-bottom:14px;} 
-
-.demo{}
-.demo:hover{ text-decoration:underline;}
 
 /****************************ASIDE************************/
 aside{background: #3d3d3d;padding: 44px 0 15px;color: #f9f9f9;font-size: 19px;line-height: 23px;}
@@ -204,55 +180,63 @@ footer {padding:30px 0; font-size: 19px;color: #fff;}
 /*==================================RESPONSIVE LAYOUTS===============================================*/
 @media only screen and (max-width: 1024px) {
 	body{min-width:960px;}
+	.flexslider .inner{padding-top: 40px;font-size: 60px;line-height: 74px;}
 	nav{margin: 0 0px 0 0;}
 }
 @media only screen and (max-width: 995px) {
- body{min-width:920px;}
- .main{width: 900px;}
- .flexslider{height: auto;}
- .flexslider .inner{padding-top: 60px;font-size: 60px;line-height: 74px;}
- .flexslider .title2{margin-bottom: 20px;}
- .flexslider .slides img {width: 100%;}
-  #pages #services, #pages #our_team, #pages #blog, #pages #contacts, #pages #portfolio{padding: 120px 0;}
-  .offer_col{width: 290px;}
-  .port_col, .team, .aside_col{width: 286px;}
-  .port_col img, .blog img, .team img, .portfolio2 img, .banner img{width: 100%;}
-  .col1{width: 640px;}
-  .col3{width: 560px;}
-  .portfolio2 a{width: 80px;height: 80px;}
+ 	body{min-width:920px;}
+ 	.main{width: 900px;}
+ 	.flexslider{height: auto;}
+ 	.flexslider .inner{padding-top: 40px;font-size: 50px;line-height: 74px;}
+ 	.flexslider .title2{margin-bottom: 20px;}
+ 	.flexslider .slides img {width: 100%;}
+  	#pages #services, #pages #our_team, #pages #blog, #pages #contacts, #pages #portfolio{padding: 80px 0;}
+  	.offer_col{width: 290px;}
+  	.port_col, .team, .aside_col{width: 286px;}
+  	.port_col img, .blog img, .team img, .portfolio2 img, .banner img{width: 100%;}
+  	.col1{width: 640px;}
+  	.col3{width: 560px;}
+  	.portfolio2 a{width: 80px;height: 80px;}
 }
 
-@media only screen and (max-width: 767px) {
- body{min-width:420px;}
- .main{width: 400px;}
- .flexslider .inner{padding-top: 40px;font-size: 40px;line-height: 49px;}
-.offer_col{position: relative;}
-.offer_col:after{display: block;position: absolute;width: 100%;height: 1px;bottom: 0;left: 0;background: url('../images/stripe1.png') 0 0 repeat-x;content: "";}
-.offer_col, .port_col, .team, .aside_col, .col1, .col2, .col3, .col4, .offer_col.extra{width: 100%;float: none;margin: 0;}
-.port_col, .col1, .team, .col3, .aside_col{margin-bottom: 30px;}
-.port_box{padding-bottom: 0;}
-.blog_nav{width: 100%;}
-.blog_nav > li{width: 38px;}
-.portfolio2 a{width: 120px;height: 120px;}
-#pages #services, #pages #our_team, #pages #blog, #pages #contacts, #pages #portfolio{padding: 60px 0;}
-.flex-direction-nav .flex-prev {background: url('../images/prev1.png') no-repeat;}
-.flex-direction-nav .flex-next {background: url('../images/next1.png') no-repeat;}
-.flex-direction-nav .flex-next{background-position: 90% 50%;}
-.flex-direction-nav .flex-prev{background-position: 10% 50%;}
+@media only screen and (max-width: 768px) {
+ 	body{min-width:480px;}
+ 	.main{width: 95%;}
+ 	.flexslider .inner{padding-top: 40px;font-size: 40px;line-height: 49px;}
+	.port_col, .col1{display: inline; margin-bottom: 10px; width: 30%;}
+	.port_box{padding-bottom: 0; padding-top: 10px;}
+	.portfolio2 a{width: 80px;height: 80px;}
+	.title1{font-size: 30px;}
+	.flex-direction-nav .flex-prev {background: url('../images/prev1.png') no-repeat;}
+	.flex-direction-nav .flex-next {background: url('../images/next1.png') no-repeat;}
+	.flex-direction-nav .flex-next{background-position: 90% 50%;}
+	.flex-direction-nav .flex-prev{background-position: 10% 50%;}
+	#pages #services, #pages #our_team, #pages #blog, #pages #contacts, #pages #portfolio{padding: 40px 0;}
+	.col3{display: inline; margin-bottom: 10px; width: 100%; margin-left: auto; margin-right: auto;}
+	.col4{margin-left: 0px; width: 100%;}
+	#contact-form input {width:100%; margin-left: auto; margin-right: auto;}
+ 	#contact-form textarea {width:100%; margin-left: auto; margin-right: auto;}
 }
 
 @media only screen and (max-width: 479px) {
- body{min-width:300px;}
- .main{width: 280px;}
- .flexslider .inner{padding-top: 40px;font-size: 30px;line-height: 38px;}
- .flexslider .inner .button{display: none;}
- .blog_nav > li{width: auto;margin: 0 5px;padding-left: 10px;border: none;}
- .blog_nav > li a{display: inline;}
- .blog_nav{background: none;}
- .blog_prev{right: 30px;}
- .blog_next{right: 10px;}
- .blog_prev, .blog_next{width: 9px;height: 14px;}
- .nav_btn{border: none;}
- #map_canvas{height: 250px;}
- .portfolio2 a{width: 80px;height: 80px;}
+ 	body{min-width:300px;}
+ 	.main{width: 95%;}
+ 	.flexslider .inner{padding-top: 40px;font-size: 30px;line-height: 38px;}
+ 	.flexslider .inner .button{display: none}
+ 	.title1{font-size: 25px;}
+ 	.buttonGap{margin-left: 0px; margin-right: 0px; margin-bottom: 10px;  margin-top: 10px;}
+ 	.team img{display: block; margin-left: auto; margin-right: auto;}
+ 	.blog_nav > li{width: auto;margin: 0 5px;padding-left: 10px;border: none;}
+ 	.blog_nav > li a{display: inline;}
+ 	.blog_nav{background: none;}
+ 	.blog_prev{right: 30px;}
+ 	.blog_next{right: 10px;}
+ 	.blog_prev, .blog_next{width: 9px;height: 14px;}
+ 	.port_col, .col1{display: inline; margin-bottom: 40px; width: 80%; float: none;  margin-left: auto; margin-right: auto;}
+ 	.nav_btn{border: none;}
+ 	.portfolio2 a{width: 80px;height: 80px};
+ 	.col3{width: 100%;}
+ 	.col4{margin-left: 0px; width: 100%;}
+ 	#contact-form input {width:100%; margin-left: auto; margin-right: auto;}
+ 	#contact-form textarea {width:100%; margin-left: auto; margin-right: auto;}
 }
