--- a/upload/css/style.css
+++ b/upload/css/style.css
@@ -157,6 +157,9 @@ div .title{margin-top: auto; margin-bottom: auto; vertical-align: middle;}
 #section_title{color: #3F8025;}
 #bullet_list{padding-left: 35px;}
 
+/*********************************>> Writing Sample Page <<*********************************/
+#description{font-size: 85%; color: #7d7d7d; display: block; margin-left: auto; margin-right: auto; text-align: center;}
+
 /*********************************>> Aside <<*********************************/
 aside{background: #3d3d3d;padding: 44px 0 15px;color: #f9f9f9;font-size: 19px;line-height: 23px;}
 aside h4{color: #f9f9f9;margin-bottom: 20px;}
