--- a/upload/css/flexslider.css
+++ b/upload/css/flexslider.css
@@ -1,4 +1,4 @@
- 
+
 /* Browser Resets */
 .flex-container a:active,
 .flexslider a:active,
@@ -6,18 +6,18 @@
 .flexslider a:focus  {outline: none;}
 .slides,
 .flex-control-nav,
-.flex-direction-nav {margin: 0; padding: 0; list-style: none;} 
+.flex-direction-nav {margin: 0; padding: 0; list-style: none;}
 
 /* FlexSlider Necessary Styles
-*********************************/ 
-.flexslider {width: 100%; padding: 0;overflow: hidden;}
+*********************************/
+.flexslider {width: 100%; margin-left: auto; margin-right: auto; padding: 0;overflow: hidden;}
 .flexslider .slides > li {display: none; position: relative; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
 .flexslider .slides img {display: block; width: 100%}
 .flex-pauseplay span {text-transform: capitalize;}
 
 /* Clearfix for the .slides element */
-.slides:after {content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0;} 
-html[xmlns] .slides {display: block;} 
+.slides:after {content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0;}
+html[xmlns] .slides {display: block;}
 * html .slides {height: 1%;}
 
 /* No JavaScript Fallback */
@@ -60,7 +60,7 @@ html[xmlns] .slides {display: block;}
 .flex-control-thumbs .active {opacity: 1; cursor: default;}
 
 @media screen and (max-width: 860px) {
-  
+
 }
 
 @media screen and (min-width: 1200px) {
